[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0"
actix-rt = "1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
pulsectl-rs = "0.3"
regex = "1.5.4"
libpulse-binding = "2.26"
